# services/service.go
@@ -1,10 +1,12 @@
 package services
 
 import (
-	"zig-cloud/services/cloudprovider/alicloud"
-	"zig-cloud/commons"
-	"github.com/astaxie/beego"
 	"os"
+	"zig-cloud/commons"
+	"zig-cloud/services/cloudprovider/alicloud"
+
+	"github.com/aliyun/alibaba-cloud-sdk-go/services/ecs"
+	"github.com/astaxie/beego"
 )
 
 // define all kinds of services
@@ -13,7 +15,9 @@ type Provider interface {
 	CreateVpc(request *commons.CreateVpcRequest) (*commons.CreateVpcResponse, error)
 	CreateVSwitch(request *commons.CreateVSwitchRequest) (*commons.CreateVSwitchResponse, error)
 	CreateSecurityGroup(request *commons.CreateSecurityGroupRequest) (*commons.CreateSecurityGroupResponse, error)
-	RunInstances(request *commons.RunInstancesRequest) (*commons.RunInstancesResponse,error)
+	RunInstances(request *commons.RunInstancesRequest) (*commons.RunInstancesResponse, error)
+	DescribeRegions() (*ecs.DescribeRegionsResponse, error)
+	DescribeZones(regionId string) ([]*commons.DescribeZonesResponse, error)
 }
 
 func GetProviderByType(providerType string) Provider {
@@ -26,20 +30,20 @@ func GetProviderByType(providerType string) Provider {
 }
 
 func NewAliCloudProvider() Provider {
-	var RegionId,  AccessKeyId, AccessKeySecret string
-	useEnv,err := beego.AppConfig.Bool(commons.UseEnv)
+	var RegionId, AccessKeyId, AccessKeySecret string
+	useEnv, err := beego.AppConfig.Bool(commons.UseEnv)
 
 	if err == nil && useEnv {
 		RegionId = os.Getenv(commons.RegionId)
 		AccessKeyId = os.Getenv(commons.AccessKeyId)
 		AccessKeySecret = os.Getenv(commons.AccessKeySecret)
-	}else {
+	} else {
 		RegionId = beego.AppConfig.String(commons.RegionId)
 		AccessKeyId = beego.AppConfig.String(commons.AccessKeyId)
 		AccessKeySecret = beego.AppConfig.String(commons.AccessKeySecret)
 	}
 
-	config := &alicloud.AliCloudConfig{RegionId:RegionId,AccessKeyId:AccessKeyId,AccessKeySecret:AccessKeySecret}
-	provider := &alicloud.CloudProvider{Config:config}
+	config := &alicloud.AliCloudConfig{RegionId: RegionId, AccessKeyId: AccessKeyId, AccessKeySecret: AccessKeySecret}
+	provider := &alicloud.CloudProvider{Config: config}
 	return provider
 }
